$Id: History,v 1.19 2001-08-16 06:06:31 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
- Aug 16,  H.Kurashige (procman-V03-02-01)
- Fixed bugs in the copy constructor of G4ProcessManager. 

- July, 31 H.Kurashige (procman-V03-02-00)
- Modify arguments for Retreive/StorePhysicsTable

- May 22, 01  G.Cosmo (procman-V03-01-00)
- Cleared pedantic warnings from Linux-g++ ISO/ANSI setup.

- Mar 12, 01  H.Kurashige (procman-V03-00-00)
- Modify Store/RetrievePhysicsTable methods 
  (add a bool argument to specify ascii/binary mode)  

- Nov 08, 00    H.Kurashige (procman-V02-00-01)
- Added  Store/RetrievePhysicsTable (virtual) methods

- Nov 03 ,00 H.Kurashige (procman-V02-00-00)
- Fixed bugs in G4ProcTblElement::operator=
- Remove destruction of processes in G4ProcessTable::~G4ProcessTable()
- STL migration in G4ProcessVector 
- Add thePILfactor and GPIL methods in G4VProcess

- May 12 ,00 H.Kurashige (procman-V01-01-00)
-  small bug fix in G4ProcessManager.cc

- Mar. 02, 00 H.Kurashige (procman-V01-00-01)
-  Use STL vector instead of  RW vectors (except for G4PhysicsVector) 
-  Add registration of process into ProcessTable in copy constructor  

- Feb. 25, 00 H.Kurashige (procman-V01-00-00)