@@ -1,4 +1,4 @@
-$Id: History,v 1.19 2001-08-16 06:06:31 kurasige Exp $
+$Id: History,v 1.20 2001-09-01 02:22:52 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+- Add Set/GetProcessManager to G4VProcess and modify 
+  G4ProcessManager::AddProcess to invoke SetProcessManager 
+
 - Aug 16,  H.Kurashige (procman-V03-02-01)
 - Fixed bugs in the copy constructor of G4ProcessManager. 
 
